@@ -986,3 +986,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          zxs.c: use libspectrum_{new,new0,renew}() macros where
          sizeof(elem) == 1 (Stuart).
 20150302 memory.c: check for overflow in libspectrum_calloc() (Stuart).
+20150302 libspectrum.h.in,memory.c: add libspectrum_{m,re}alloc_n() and use this
+         for libspectrum_{new,renew}() macros (Stuart).
